feat: add additional paramenters/operation to swagger
